token usecase 세분화
