# src/api/token/application/token.usecase.ts
@@ -15,16 +15,28 @@ export class TokenUsecase implements ITokenUsecase {
     private readonly accountService: IAccountService,
   ) {}
 
-  async getToken(
-    _account: ITokenUsecase.SignInAccount | undefined,
-    oidc: boolean,
-  ): Promise<TokenAPI.Tokens> {
-    const account = await this.accountService.findOne({
-      id: throw_if_null(_account, HttpExceptionFactory('UnAuthorized')).id,
+  private getAccount(account: ITokenUsecase.SignInAccount | undefined) {
+    return this.accountService.findOne({
+      id: throw_if_null(account, HttpExceptionFactory('UnAuthorized')).id,
     });
+  }
+
+  async getTokens(
+    _account: ITokenUsecase.SignInAccount | undefined,
+  ): Promise<TokenAPI.Tokens> {
+    const account = await this.getAccount(_account);
     return {
       access_token: this.tokenService.getAccessToken(account),
-      ...(oidc ? { id_token: this.tokenService.getIdToken(account) } : {}),
+      id_token: this.tokenService.getIdToken(account),
+    };
+  }
+
+  async getAccessToken(
+    _account: ITokenUsecase.SignInAccount | undefined,
+  ): Promise<TokenAPI.AccessToken> {
+    const account = await this.getAccount(_account);
+    return {
+      access_token: this.tokenService.getAccessToken(account),
     };
   }
 }
